<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="50dp">
<!--logo图标-->
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="100dp">

        <ImageView
            android:id="@+id/iv_user"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/user" />

        <EditText
            android:id="@+id/et_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:hint="@string/user" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="5dp"
        android:background="#aa000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <ImageView
            android:id="@+id/iv_password"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/password" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="7"
            android:background="@null"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:text="@string/forget_password"
            android:clickable="true"
            android:textColor="@color/selector_password_color"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="5dp"
        android:background="#aa000000" />

    <Button

        android:id="@+id/bt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/No_user" />

        <TextView

            android:id="@+id/tv_Reg_Now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/Reg_Now"
            android:textColor="@color/selector_text_press_color" />
    </LinearLayout>

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="80dp"-->
    <!--android:gravity="center_horizontal">-->

    <!--<View-->

    <!--android:layout_width="80dp"-->
    <!--android:layout_height="1dp"-->
    <!--android:layout_gravity="center_vertical"-->
    <!--android:layout_marginLeft="50dp"-->
    <!--android:layout_marginRight="20dp"-->
    <!--android:background="#e2d6d6d6" />-->

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center"-->
    <!--android:text="@string/Other_login"-->
    <!--android:textColor="#e2d6d6d6" />-->

    <!--<View-->
    <!--android:layout_width="80dp"-->
    <!--android:layout_height="1dp"-->
    <!--android:layout_gravity="center_vertical"-->
    <!--android:layout_marginLeft="20dp"-->
    <!--android:layout_marginRight="50dp"-->
    <!--android:background="#e2d6d6d6" />-->
    <!--</LinearLayout>-->

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:gravity="center_horizontal"-->
    <!--android:paddingTop="20dp">-->

    <!--<ImageView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:src="@drawable/qq" />-->

    <!--<ImageView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:paddingLeft="30dp"-->
    <!--android:paddingRight="30dp"-->
    <!--android:src="@drawable/weixin" />-->

    <!--<ImageView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:src="@drawable/weibo" />-->
    <!--</LinearLayout>-->

</LinearLayout>
